--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-openpyxl
-msoffcrypto-tool
-xlrd==2.0.1
+streamlit>=1.32
+pandas>=2.0
+openpyxl>=3.1
+msoffcrypto-tool>=5.0
+xlrd>=2.0
+xlwt>=1.3.0
