--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.32
-pandas>=2.0
-openpyxl>=3.1
-msoffcrypto-tool>=5.0
-xlrd>=2.0
+streamlit
+pandas
+openpyxl
+msoffcrypto-tool
+xlrd==2.0.1
